--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         }
 
         h1 {
-            color: #ff94e3;
+            color: #53377A;
             margin-bottom: 30px;
         }
 
@@ -63,7 +63,7 @@
         .alternative-methods {
             margin-top: 30px;
             padding: 15px;
-            border-top: 1px solid #ff94e3;
+            border-top: 1px solid #53377A;
         }
 
         .alternative-methods p {
