--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         }
 
         h1 {
-            color: #53377A;
+            color: #ffffff;
             margin-bottom: 30px;
         }
 
